# telegram_bot

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.py  conftest.py  log_file  pyproject.toml  pytest.ini  setup.cfg
public/: index.html
public/docs/v0.1.0/: api_config.yaml
src/: config.yml  ngrok.py
src/api/db/: blue_chips.py  const.py  db.py  update.py  update_db.csv
src/api/method/predict/: data.csv  model.py  predict_main.py
src/api/method/stock/: stock_main.py
src/api/method/stock_date/: stock_date_main.py
src/api/status/: data.py  handler.py  schemas.py
src/service/: routes.py
src/tests/integration/: test_db.py  test_hendler.py  test_pred.py  test_stock.py  test_stock_date.py
tools/apispec/: api_view.html  generate.py  plugin.py
