[tool.poetry]
name = "зpyproject"
version = "0.1.0"
description = "telegram-bot"
authors = ["Ilya Derebezov <ilderebezov@gmail.com>"]
license = "free"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
pyngrok = "^5.1.0"
requests = "^2.26.0"
aiohttp_cors = "^0.7.0"
telepot = "^12.7"
pandas = "^1.3.5"
asyncpg = "^0.25.0"
sklearn = "^0.0"
marshmallow = "^3.14.1"
pytest = "^6.2.5"
pytest-aiohttp = "^0.3.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
apispec = "^5.1.1"

[tool.poetry.extras]
tests = ["pytest", "pytest-aiohttp", "pytest-cov"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
